--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,3 +1,3 @@
-${project.parent.artifactId}.title=Generateur Module
+${project.parent.artifactId}.title=Generateur IDs Module
 ${project.parent.artifactId}.manage=Manage module
 ${project.parent.artifactId}.generate.gutterlink=Generate IDs
