--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -1,3 +1,3 @@
-${project.parent.artifactId}.title=Generateur Module
-${project.parent.artifactId}.manage=Manage module
+${project.parent.artifactId}.title=Module G&#233;n&#233;rateur IDs
+${project.parent.artifactId}.manage=G&#233;rer IDs
 ${project.parent.artifactId}.generate.gutterlink=G&#233;n&#233;rer IDs
