--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -1,3 +1,10 @@
+## General Translations
+
 ${project.parent.artifactId}.title=Generateur Module
 ${project.parent.artifactId}.manage=Manage module
 ${project.parent.artifactId}.generate.gutterlink=G&#233;n&#233;rer IDs
+
+## Other Specific Translations
+
+${project.parent.artifactId}.current.year=Current Year
+${project.parent.artifactId}.number.to.generate=Nombre &#224; G&#233;n&#233;rer
